Update readme and homepage

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-	<meta name='description' content='App to keep track of work hours and estimate payout'>
+	<meta name='description' content='A simple app to keep track of work hours and estimate payout'>
 
 	<title>Timesheet</title>
 
